@@ -5,6 +5,10 @@ as it is included in Scrooge's user's guide.
 4.x
 -----
 
+- scrooge-core: `c.t.s.ThriftUnion` adds methods `containedValue` and
+  `unionStructFieldInfo`. These were already a part of the generated Scala
+  implementations for unions, but now it is defined on the trait. ``RB_ID=909576``
+
 - scrooge-generator: Add parsing, AST, and Scala code generation
   support for annotations on enums, enum fields, services, and
   service methods. ``RB_ID=908556``
